src/libadalang/src/libadalang.h


typedef struct
{
   uint64_t serial_number;
} *ada_analysis_context;
typedef struct
{
   uint64_t version_number;
} *ada_analysis_unit;
typedef void* ada_base_node;
typedef struct {
   int length;
   int ref_count;
   uint32_t content[1];
} *ada_string_type;
typedef uint8_t ada_bool;
typedef struct {
    ada_source_location start;
    ada_source_location end;
} ada_source_location_range;
typedef struct {
    uint32_t *chars;
    size_t length;
    int is_allocated;
} ada_text;
typedef enum {
      ADA_TERMINATION = 0
      ,
      ADA_LEXING_FAILURE = 1
      ,
      ADA_IDENTIFIER = 2
      ,
      ADA_ALL = 3
      ,
      ADA_ABORT = 4
      ,
      ADA_ELSE = 5
      ,
      ADA_NEW = 6
      ,
      ADA_RETURN = 7
      ,
      ADA_ABS = 8
      ,
      ADA_ELSIF = 9
      ,
      ADA_NOT = 10
      ,
      ADA_REVERSE = 11
      ,
      ADA_END = 12
      ,
      ADA_NULL = 13
      ,
      ADA_ACCEPT = 14
      ,
      ADA_ENTRY = 15
      ,
      ADA_SELECT = 16
      ,
      ADA_ACCESS = 17
      ,
      ADA_EXCEPTION = 18
      ,
      ADA_OF = 19
      ,
      ADA_SEPARATE = 20
      ,
      ADA_EXIT = 21
      ,
      ADA_OR = 22
      ,
      ADA_OTHERS = 23
      ,
      ADA_SUBTYPE = 24
      ,
      ADA_AND = 25
      ,
      ADA_FOR = 26
      ,
      ADA_OUT = 27
      ,
      ADA_ARRAY = 28
      ,
      ADA_FUNCTION = 29
      ,
      ADA_AT = 30
      ,
      ADA_GENERIC = 31
      ,
      ADA_PACKAGE = 32
      ,
      ADA_TASK = 33
      ,
      ADA_BEGIN = 34
      ,
      ADA_GOTO = 35
      ,
      ADA_PRAGMA = 36
      ,
      ADA_TERMINATE = 37
      ,
      ADA_BODY = 38
      ,
      ADA_PRIVATE = 39
      ,
      ADA_THEN = 40
      ,
      ADA_IF = 41
      ,
      ADA_PROCEDURE = 42
      ,
      ADA_TYPE = 43
      ,
      ADA_CASE = 44
      ,
      ADA_IN = 45
      ,
      ADA_CONSTANT = 46
      ,
      ADA_IS = 47
      ,
      ADA_RAISE = 48
      ,
      ADA_USE = 49
      ,
      ADA_DECLARE = 50
      ,
      ADA_RANGE = 51
      ,
      ADA_DELAY = 52
      ,
      ADA_LIMITED = 53
      ,
      ADA_RECORD = 54
      ,
      ADA_WHEN = 55
      ,
      ADA_DELTA = 56
      ,
      ADA_LOOP = 57
      ,
      ADA_REM = 58
      ,
      ADA_WHILE = 59
      ,
      ADA_DIGITS = 60
      ,
      ADA_RENAMES = 61
      ,
      ADA_DO = 62
      ,
      ADA_MOD = 63
      ,
      ADA_XOR = 64
      ,
      ADA_PAR_CLOSE = 65
      ,
      ADA_PAR_OPEN = 66
      ,
      ADA_BRACK_CLOSE = 67
      ,
      ADA_BRACK_OPEN = 68
      ,
      ADA_SEMICOLON = 69
      ,
      ADA_COLON = 70
      ,
      ADA_COMMA = 71
      ,
      ADA_DOUBLEDOT = 72
      ,
      ADA_DOT = 73
      ,
      ADA_DIAMOND = 74
      ,
      ADA_LTE = 75
      ,
      ADA_GTE = 76
      ,
      ADA_ARROW = 77
      ,
      ADA_EQUAL = 78
      ,
      ADA_LT = 79
      ,
      ADA_GT = 80
      ,
      ADA_PLUS = 81
      ,
      ADA_MINUS = 82
      ,
      ADA_POWER = 83
      ,
      ADA_MULT = 84
      ,
      ADA_AMP = 85
      ,
      ADA_NOTEQUAL = 86
      ,
      ADA_DIVIDE = 87
      ,
      ADA_TICK = 88
      ,
      ADA_PIPE = 89
      ,
      ADA_ASSIGN = 90
      ,
      ADA_LABEL_START = 91
      ,
      ADA_LABEL_END = 92
      ,
      ADA_TARGET = 93
      ,
      ADA_STRING = 94
      ,
      ADA_CHAR = 95
      ,
      ADA_WITH = 96
      ,
      ADA_DECIMAL = 97
      ,
      ADA_INTEGER = 98
      ,
      ADA_COMMENT = 99
      ,
      ADA_PREP_LINE = 100
      ,
      ADA_WHITESPACE = 101
} ada_token_kind;
typedef struct
{
   uint64_t version;
} *ada_token_data_handler;
typedef struct {
    ada_analysis_context context;
    ada_token_data_handler token_data;
    int token_index, trivia_index;
    ada_token_kind kind;
    ada_text text;
    ada_source_location_range sloc_range;
} ada_token;
typedef struct ada_ada_node_array_record *ada_ada_node_array;
typedef struct ada_param_actual_array_record *ada_param_actual_array;
typedef struct {
        ada_internal_metadata md;
        ada_env_rebindings_type rebindings;
        ada_bool from_rebound;
} ada_internal_entity_info;
typedef struct {
        ada_base_node node;
        ada_internal_entity_info info;
} ada_base_entity;
struct ada_ada_node_array_record {
   int n;
   int ref_count;
   ada_base_entity items[1];
};
struct ada_param_actual_array_record {
   int n;
   int ref_count;
   ada_internal_param_actual items[1];
};
extern int ada_ada_node_parent(
    ada_base_entity *node,
    ada_base_entity *value_p
);
extern int ada_ada_node_parents(
    ada_base_entity *node,
        ada_bool
        with_self,
    ada_ada_node_array *value_p
);
extern int ada_ada_node_children(
    ada_base_entity *node,
    ada_ada_node_array *value_p
);
extern int ada_ada_node_token_start(
    ada_base_entity *node,
    ada_token *value_p
);
extern int ada_ada_node_token_end(
    ada_base_entity *node,
    ada_token *value_p
);
extern int ada_ada_node_child_index(
    ada_base_entity *node,
    int *value_p
);
extern int ada_ada_node_previous_sibling(
    ada_base_entity *node,
    ada_base_entity *value_p
);
extern int ada_ada_node_next_sibling(
    ada_base_entity *node,
    ada_base_entity *value_p
);
extern int ada_ada_node_unit(
    ada_base_entity *node,
    ada_analysis_unit *value_p
);
extern int ada_ada_node_is_ghost(
    ada_base_entity *node,
    ada_bool *value_p
);
extern int ada_ada_node_full_sloc_image(
    ada_base_entity *node,
    ada_string_type *value_p
);
extern int ada_abort_node_p_as_bool(
    ada_base_entity *node,
    ada_bool *value_p
);
extern int ada_abstract_node_p_as_bool(
    ada_base_entity *node,
    ada_bool *value_p
);
extern int ada_assoc_list_p_zip_with_params(
    ada_base_entity *node,
        ada_bool
        imprecise_fallback,
    ada_param_actual_array *value_p
);
extern int ada_aliased_node_p_as_bool(
    ada_base_entity *node,
    ada_bool *value_p
);
extern int ada_all_node_p_as_bool(
    ada_base_entity *node,
    ada_bool *value_p
);
extern int ada_constrained_array_indices_f_list(
    ada_base_entity *node,
    ada_base_entity *value_p
);
extern int ada_unconstrained_array_indices_f_types(
    ada_base_entity *node,
    ada_base_entity *value_p
);
extern int ada_aspect_assoc_f_id(
    ada_base_entity *node,
    ada_base_entity *value_p
);
extern int ada_aspect_assoc_f_expr(
    ada_base_entity *node,
    ada_base_entity *value_p
);
extern int ada_aspect_assoc_p_is_ghost_code(
    ada_base_entity *node,
    ada_bool *value_p
);
extern int ada_at_clause_f_name(
    ada_base_entity *node,
    ada_base_entity *value_p
);
extern int ada_at_clause_f_expr(
    ada_base_entity *node,
    ada_base_entity *value_p
);
extern int ada_attribute_def_clause_f_attribute_expr(
    ada_base_entity *node,
    ada_base_entity *value_p
);
extern int ada_attribute_def_clause_f_expr(
    ada_base_entity *node,
    ada_base_entity *value_p
);